Enlarged dot size on line chart to make sense to pattern in legend, adjusted the chord legent to avoid cutting off word surprised

--- a/style.css
+++ b/style.css
@@ -92,3 +92,7 @@ label{
   height: 100%;
   border: none;
 }
+
+.chordChartLegendContainer {
+  margin-left: -5%; /* to avoid cut off on "Surprised" */
+}
